build: 支持 CHANGELOG 生成脚本

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint:fix": "eslint --fix --ext .ts .",
     "test": "pnpm --filter @galacean/effects-test test",
     "version": "node ./scripts/update-version",
+    "changelog": "git fetch origin && node ./scripts/print-changelog",
     "check:ts": "tsc -b ./tsconfig.check.json",
     "clean:nm": "rimraf '{packages,web-packages,plugin-packages}/**/node_modules' && rimraf 'node_modules'",
     "clean:dist": "rimraf '{packages,web-packages,plugin-packages}/**/dist'",
@@ -50,6 +51,7 @@
     "husky": "^7.0.4",
     "ip": "^1.1.8",
     "js-yaml": "^4.1.0",
+    "jsdom": "^22.1.0",
     "lint-staged": "^11.2.6",
     "pnpm": "^8.7.0",
     "rimraf": "^3.0.2",
