feat: import spine-core by npm package instead of copy code

--- a/plugin-packages/spine/package.json
+++ b/plugin-packages/spine/package.json
@@ -41,5 +41,8 @@
   "devDependencies": {
     "@galacean/effects": "workspace:*",
     "fpsmeter": "^0.3.1"
+  },
+  "dependencies": {
+    "@esotericsoftware/spine-core": "~4.2.33"
   }
 }
