--- a/web-packages/demo/package.json
+++ b/web-packages/demo/package.json
@@ -13,6 +13,7 @@
     "three": "^0.149.0"
   },
   "devDependencies": {
+    "@advjs/blender-ui": "0.0.2-beta.8",
     "@types/three": "^0.149.0"
   }
 }
