--- a/web-packages/demo/package.json
+++ b/web-packages/demo/package.json
@@ -10,10 +10,12 @@
     "@galacean/effects": "workspace:*",
     "@galacean/effects-threejs": "workspace:*",
     "@galacean/effects-plugin-orientation-transformer": "workspace:*",
-    "three": "^0.149.0"
+    "three": "^0.149.0",
+    "uuid":"^9.0.1"
   },
   "devDependencies": {
     "@advjs/blender-ui": "0.0.2-beta.9",
-    "@types/three": "^0.149.0"
+    "@types/three": "^0.149.0",
+    "@types/uuid":"^9.0.7"
   }
 }
