feat: add new package for assets

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -34,6 +34,9 @@
       "@galacean/effects-helper": [
         "./packages/effects-helper/src"
       ],
+      "@galacean/effects-assets": [
+        "./packages/effects-assets/src"
+      ],
       "@galacean/effects": [
         "./packages/effects/src"
       ],
