--- a/packages/effects-core/package.json
+++ b/packages/effects-core/package.json
@@ -51,6 +51,7 @@
   },
   "dependencies": {
     "@galacean/effects-specification": "1.0.0",
-    "@galacean/effects-math": "1.0.0"
+    "@galacean/effects-math": "1.0.0",
+    "uuid": "9.0.1"
   }
 }
