--- a/web-packages/devtools/package.json
+++ b/web-packages/devtools/package.json
@@ -1,6 +1,5 @@
 {
   "name": "devtools",
-  "type": "module",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -14,6 +13,7 @@
   "devDependencies": {
     "@advjs/gui": "0.0.3-beta.3",
     "@antfu/eslint-config": "^2.6.2",
+    "@galacean/effects": "workspace:*",
     "@unocss/reset": "^0.58.3",
     "@vitejs/plugin-vue": "^5.0.2",
     "@vueuse/core": "^10.7.1",
@@ -24,6 +24,7 @@
     "unplugin-glsl": "^0.1.9",
     "unplugin-vue-components": "^0.26.0",
     "vite": "^5.0.11",
+    "vite-tsconfig-paths": "^4.2.2",
     "vue-tsc": "^1.8.27"
   }
 }
