--- a/web-packages/demo/package.json
+++ b/web-packages/demo/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@galacean/effects": "workspace:*",
     "@galacean/effects-threejs": "workspace:*",
+    "@galacean/effects-assets": "workspace:*",
     "@galacean/effects-plugin-orientation-transformer": "workspace:*",
     "three": "^0.149.0"
   },
