--- a/web-packages/devtools/package.json
+++ b/web-packages/devtools/package.json
@@ -14,6 +14,7 @@
     "@advjs/gui": "0.0.3-beta.4",
     "@antfu/eslint-config": "^2.6.2",
     "@galacean/effects": "workspace:*",
+    "@galacean/effects-assets": "workspace:*",
     "@types/wicg-file-system-access": "^2023.10.4",
     "@unocss/reset": "^0.58.3",
     "@vitejs/plugin-vue": "^5.0.2",
