--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@manypkg/get-packages": "^2.2.0",
     "@rollup/plugin-commonjs": "^21.1.0",
     "@rollup/plugin-inject": "^5.0.5",
+    "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-replace": "^5.0.2",
     "@rollup/plugin-terser": "^0.4.3",
