--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/chai": "4.3.4",
     "@types/chai-spies": "1.0.0",
     "@types/mocha": "10.0.1",
+    "@types/wicg-file-system-access": "^2023.10.4",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "@vitejs/plugin-legacy": "^4.1.1",
