--- a/packages/effects-webgl/tsconfig.json
+++ b/packages/effects-webgl/tsconfig.json
@@ -4,6 +4,7 @@
     "rootDir": "src",
     "outDir": "dist",
     "composite": true,
+    "experimentalDecorators": true 
   },
   "include": [
     "src",
