--- a/packages/effects-core/tsconfig.json
+++ b/packages/effects-core/tsconfig.json
@@ -3,8 +3,7 @@
   "compilerOptions": {
     "rootDir": "src",
     "outDir": "dist",
-    "composite": true,
-    "experimentalDecorators": true 
+    "composite": true
   },
   "include": [
     "src",
