--- a/web-packages/devtools/package.json
+++ b/web-packages/devtools/package.json
@@ -12,7 +12,7 @@
     "vue": "^3.4.15"
   },
   "devDependencies": {
-    "@advjs/gui": "0.0.5",
+    "@advjs/gui": "0.0.7-beta.1",
     "@antfu/eslint-config": "^2.6.3",
     "@galacean/effects": "workspace:*",
     "@galacean/effects-assets": "workspace:*",
