chore: update demo

--- a/plugin-packages/downgrade/package.json
+++ b/plugin-packages/downgrade/package.json
@@ -42,6 +42,8 @@
     "registry": "https://registry.npmjs.org"
   },
   "devDependencies": {
-    "@galacean/effects": "workspace:*"
+    "@galacean/effects": "workspace:*",
+    "@types/ua-parser-js": "^0.7.39",
+    "ua-parser-js": "^1.0.37"
   }
 }
