--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "iOS 9"
   ],
   "dependencies": {
-    "core-js": "^3.32.1",
     "string-hash": "^1.1.3"
   },
   "devDependencies": {
@@ -38,7 +37,8 @@
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-replace": "^5.0.2",
-    "@rollup/plugin-terser": "^0.4.3",
+    "@swc/core": "^1.4.11",
+    "@swc/helpers": "^0.5.8",
     "@types/chai": "4.3.14",
     "@types/chai-spies": "1.0.6",
     "@types/mocha": "10.0.1",
@@ -56,20 +56,17 @@
     "fs-extra": "^11.1.1",
     "husky": "^9.0.11",
     "ip": "^2.0.1",
-    "js-yaml": "^4.1.0",
     "jsdom": "^22.1.0",
     "lint-staged": "^11.2.6",
-    "pnpm": "^8.7.0",
+    "pnpm": "^8.15.5",
     "rimraf": "^3.0.2",
     "rollup": "^2.79.1",
-    "rollup-plugin-livereload": "^2.0.5",
-    "rollup-plugin-serve": "^1.1.0",
-    "rollup-plugin-typescript2": "^0.34.1",
+    "rollup-plugin-swc3": "^0.11.0",
     "simple-git": "^3.19.1",
     "tslib": "^2.6.2",
-    "typedoc": "^0.25.4",
-    "typescript": "^5.2.2",
-    "vite": "^4.4.9",
+    "typedoc": "^0.25.12",
+    "typescript": "^5.3.3",
+    "vite": "^4.5.2",
     "vite-plugin-externals": "^0.6.2",
     "vite-tsconfig-paths": "^4.2.2"
   }
