build: 保留 effects-core 打包

--- a/packages/effects-assets/package.json
+++ b/packages/effects-assets/package.json
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "prebuild": "pnpm clean",
-    "build": "tsc -d --declarationDir dist",
+    "build": "tsc -d",
     "clean": "rimraf dist && rimraf '*+(.tsbuildinfo)'",
     "prepublishOnly": "pnpm build"
   },
