--- a/packages/effects-webgl/package.json
+++ b/packages/effects-webgl/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "prebuild": "pnpm clean",
     "build": "pnpm build:declaration",
-    "build:declaration": "tsc -d --declarationDir dist --emitDeclarationOnly",
+    "build:declaration": "tsc -d --emitDeclarationOnly",
     "clean": "rimraf dist && rimraf '*+(.tsbuildinfo)'",
     "prepublishOnly": "pnpm build"
   },
