--- a/packages/effects-core/package.json
+++ b/packages/effects-core/package.json
@@ -2,20 +2,24 @@
   "name": "@galacean/effects-core",
   "version": "1.2.3",
   "description": "Galacean Effects runtime core for the web",
-  "module": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "files": [
     "dist"
   ],
   "exports": {
     ".": {
-      "import": "./dist/index.js",
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js",
       "types": "./dist/index.d.ts"
     }
   },
   "scripts": {
     "prebuild": "pnpm clean",
-    "build": "tsc -d --declarationDir dist",
+    "build": "pnpm build:declaration && pnpm build:module",
+    "build:module": "rollup -c",
+    "build:declaration": "tsc -d --emitDeclarationOnly",
     "clean": "rimraf dist && rimraf '*+(.tsbuildinfo)'",
     "prepublishOnly": "pnpm build"
   },
