--- a/plugin-packages/alipay-downgrade/tsconfig.json
+++ b/plugin-packages/alipay-downgrade/tsconfig.json
@@ -3,8 +3,7 @@
   "compilerOptions": {
     "rootDir": "src",
     "outDir": "dist",
-    "composite": true,
-    "paths": {}
+    "composite": true
   },
   "include": [
     "src",
