build: use swc plugin for generate (#240)
* build: use swc plugin for generate

* build: 抽离 rollup 公共配置

* build: 保留 effects-core 打包

* fix: 修复 demo/test 本地 server 问题

* build: 完善 plugin external 配置

--- a/packages/effects-core/package.json
+++ b/packages/effects-core/package.json
@@ -19,7 +19,7 @@
     "prebuild": "pnpm clean",
     "build": "pnpm build:declaration && pnpm build:module",
     "build:module": "rollup -c",
-    "build:declaration": "tsc -d --declarationDir dist --emitDeclarationOnly",
+    "build:declaration": "tsc -d --emitDeclarationOnly",
     "clean": "rimraf dist && rimraf '*+(.tsbuildinfo)'",
     "prepublishOnly": "pnpm build"
   },
@@ -51,7 +51,7 @@
   },
   "dependencies": {
     "@galacean/effects-specification": "2.0.0-alpha.3",
-    "@galacean/effects-math": "1.0.1",
+    "@galacean/effects-math": "1.1.0-alpha.0",
     "uuid": "9.0.1"
   }
 }
