--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -19,7 +19,7 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "module": "ESNext",
-    "target": "ES6",
+    "target": "ESNext",
     "lib": [
       "DOM",
       "ES2015",
@@ -46,10 +46,7 @@
       ],
       "@galacean/effects-plugin-*": [
         "./plugin-packages/*/src"
-      ],
-      "@galacean/effects-plugin-model/*": [
-        "./plugin-packages/model/src/*"
-      ],
+      ]
     }
   }
 }
