--- a/tsconfig.external.json
+++ b/tsconfig.external.json
@@ -1,9 +1,6 @@
 {
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
-    "target": "ES5",
-  },
-  "exclude": [
-    "dist"
-  ]
+    "paths": {}
+  }
 }
