--- a/plugin-packages/model/package.json
+++ b/plugin-packages/model/package.json
@@ -49,7 +49,7 @@
   "devDependencies": {
     "@galacean/effects": "workspace:*",
     "@galacean/effects-plugin-editor-gizmo": "workspace:*",
-    "@vvfx/resource-detection": "link://Users/yiqi/git/vvfx/resource-detection",
+    "@vvfx/resource-detection": "0.6.0-alpha.2",
     "@types/hammerjs": "^2.0.45",
     "fpsmeter": "^0.3.1",
     "hammerjs": "^2.0.8"
