--- a/packages/effects-core/package.json
+++ b/packages/effects-core/package.json
@@ -50,7 +50,7 @@
     "registry": "https://registry.npmjs.org"
   },
   "dependencies": {
-    "@galacean/effects-specification": "1.2.0-beta.0",
+    "@galacean/effects-specification": "1.2.0",
     "@galacean/effects-math": "1.0.1"
   }
 }
