--- a/packages/effects-core/package.json
+++ b/packages/effects-core/package.json
@@ -51,7 +51,7 @@
   },
   "dependencies": {
     "@galacean/effects-specification": "2.0.0-alpha.10",
-    "@galacean/effects-math": "1.1.0-alpha.0",
+    "@galacean/effects-math": "1.1.0",
     "uuid": "9.0.1"
   }
 }
