build: use double quotation mark

--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "version": "node ./scripts/update-version",
     "changelog": "git fetch origin && node ./scripts/print-changelog",
     "check:ts": "tsc -b ./tsconfig.check.json",
-    "clean:nm": "rimraf '{packages,web-packages,plugin-packages}/**/node_modules' && rimraf 'node_modules'",
-    "clean:dist": "rimraf '{packages,web-packages,plugin-packages}/**/dist'",
-    "clean:artifacts": "rimraf '{packages,web-packages,plugin-packages}/**/src/**/*+(.d.ts|.js.map)'",
-    "clean:declaration": "rimraf '{packages,web-packages,plugin-packages}/**/*+(.tsbuildinfo)'",
+    "clean:nm": "rimraf \"{packages,web-packages,plugin-packages}/**/node_modules\" && rimraf \"node_modules\"",
+    "clean:dist": "rimraf \"{packages,web-packages,plugin-packages}/**/dist\"",
+    "clean:artifacts": "rimraf \"{packages,web-packages,plugin-packages}/**/src/**/*+(.d.ts|.js.map)\"",
+    "clean:declaration": "rimraf \"{packages,web-packages,plugin-packages}/**/*+(.tsbuildinfo)\"",
     "clean:all": "pnpm clean:artifacts && pnpm clean:declaration && pnpm clean:dist && pnpm clean:nm",
     "preinstall": "npx only-allow pnpm",
     "prepare": "husky install",
