--- a/packages/effects-core/package.json
+++ b/packages/effects-core/package.json
@@ -20,7 +20,7 @@
     "build": "pnpm build:declaration && pnpm build:module",
     "build:module": "rollup -c",
     "build:declaration": "tsc -d --emitDeclarationOnly",
-    "clean": "rimraf dist && rimraf '*+(.tsbuildinfo)'",
+    "clean": "rimraf dist && rimraf \"*+(.tsbuildinfo)\"",
     "prepublishOnly": "pnpm build"
   },
   "contributors": [
