--- a/packages/effects-webgl/package.json
+++ b/packages/effects-webgl/package.json
@@ -15,7 +15,7 @@
     "prebuild": "pnpm clean",
     "build": "pnpm build:declaration",
     "build:declaration": "tsc -d --emitDeclarationOnly",
-    "clean": "rimraf dist && rimraf '*+(.tsbuildinfo)'",
+    "clean": "rimraf dist && rimraf \"*+(.tsbuildinfo)\"",
     "prepublishOnly": "pnpm build"
   },
   "contributors": [
