--- a/plugin-packages/model/package.json
+++ b/plugin-packages/model/package.json
@@ -29,7 +29,7 @@
     "build:module": "rollup -c",
     "build:declaration": "tsc -d --emitDeclarationOnly",
     "build:demo": "rimraf dist && vite build",
-    "clean": "rimraf dist && rimraf '*+(.tsbuildinfo)'",
+    "clean": "rimraf dist && rimraf \"*+(.tsbuildinfo)\"",
     "prepublishOnly": "pnpm build"
   },
   "contributors": [
