--- a/plugin-packages/orientation-transformer/package.json
+++ b/plugin-packages/orientation-transformer/package.json
@@ -14,6 +14,18 @@
       "import": "./dist/index.mjs",
       "require": "./dist/index.js",
       "types": "./dist/index.d.ts"
+    },
+    "./alipay": {
+      "import": "./dist/alipay.mjs",
+      "require": "./dist/alipay.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
+  "typesVersions": {
+    "*": {
+      "alipay": [
+        "./dist/index.d.ts"
+      ]
     }
   },
   "scripts": {
@@ -21,7 +33,7 @@
     "preview": "concurrently -k \"vite build -w\" \"sleep 6 && vite preview\"",
     "prebuild": "pnpm clean",
     "build": "pnpm build:declaration && pnpm build:module",
-    "build:module": "rollup -c",
+    "build:module": "rollup -c && cp -Rf ./dist /Users/cr/Workzone/miniProgram/galacean-effects-alipay-miniprogram-demo/node_modules/@galacean/effects-plugin-orientation-transformer",
     "build:declaration": "tsc -d --declarationDir dist --emitDeclarationOnly",
     "build:demo": "rimraf dist && vite build",
     "clean": "rimraf dist && rimraf '*+(.tsbuildinfo)'",
