chore: 还原打包设置

--- a/packages/effects/package.json
+++ b/packages/effects/package.json
@@ -39,7 +39,7 @@
   "scripts": {
     "prebuild": "pnpm clean",
     "build": "pnpm build:declaration && pnpm build:module",
-    "build:module": "rollup -c && cp -Rf ./dist /Users/cr/Workzone/miniProgram/galacean-effects-alipay-miniprogram-demo/node_modules/@galacean/effects",
+    "build:module": "rollup -c",
     "build:declaration": "tsc -d --declarationDir dist --emitDeclarationOnly",
     "clean": "rimraf dist && rimraf '*+(.tsbuildinfo)'",
     "prepublishOnly": "pnpm build"
