feat: 增加alipay小程序打包配置

--- a/plugin-packages/model/package.json
+++ b/plugin-packages/model/package.json
@@ -19,6 +19,11 @@
       "import": "./dist/*.mjs",
       "require": "./dist/*.js",
       "types": "./dist/*.d.ts"
+    },
+    "./alipay": {
+      "import": "./dist/alipay.mjs",
+      "require": "./dist/alipay.js",
+      "types": "./dist/index.d.ts"
     }
   },
   "scripts": {
