feat: add composition select window

--- a/web-packages/imgui-demo/package.json
+++ b/web-packages/imgui-demo/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "@galacean/effects": "workspace:*",
+    "@galacean/effects-plugin-orientation-transformer": "workspace:*",
+    "@galacean/effects-plugin-model": "workspace:*",
     "maoan-imgui-js": "^1.0.6"
   }
 }
