--- a/web-packages/imgui-demo/tsconfig.json
+++ b/web-packages/imgui-demo/tsconfig.json
@@ -6,6 +6,7 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "skipLibCheck": true,
     "experimentalDecorators": true,
+    "strict": true,
 
     /* Bundler mode */
     "moduleResolution": "bundler",
