--- a/web-packages/imgui-demo/tsconfig.json
+++ b/web-packages/imgui-demo/tsconfig.json
@@ -7,6 +7,7 @@
     "skipLibCheck": true,
     "experimentalDecorators": true,
     "strict": true,
+    "strictPropertyInitialization": false,
 
     /* Bundler mode */
     "moduleResolution": "bundler",
