feat: support glb import

--- a/web-packages/imgui-demo/package.json
+++ b/web-packages/imgui-demo/package.json
@@ -17,6 +17,7 @@
     "@galacean/effects-plugin-orientation-transformer": "workspace:*",
     "@galacean/effects-plugin-model": "workspace:*",
     "@galacean/effects-plugin-spine": "workspace:*",
+    "@vvfx/resource-detection": "0.6.0-alpha.9",
     "maoan-imgui-js": "^1.0.6"
   }
 }
