--- a/plugin-packages/downgrade/package.json
+++ b/plugin-packages/downgrade/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@galacean/effects-plugin-downgrade",
-  "version": "1.2.1",
+  "version": "1.6.1",
   "description": "Galacean Effects player downgrade plugin",
   "module": "./dist/index.mjs",
   "main": "./dist/index.js",
@@ -13,6 +13,11 @@
     ".": {
       "import": "./dist/index.mjs",
       "require": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    },
+    "./alipay": {
+      "import": "./dist/alipay.mjs",
+      "require": "./dist/alipay.js",
       "types": "./dist/index.d.ts"
     }
   },
