--- a/packages/effects-core/package.json
+++ b/packages/effects-core/package.json
@@ -17,7 +17,8 @@
   },
   "scripts": {
     "prebuild": "pnpm clean",
-    "build": "pnpm build:declaration && pnpm build:module",
+    "build": "pnpm build:fbs && pnpm build:declaration && pnpm build:module",
+    "build:fbs": "node ../../scripts/flatc ./src/definations/index.fbs",
     "build:module": "rollup -c",
     "build:declaration": "tsc -d --emitDeclarationOnly",
     "clean": "rimraf dist && rimraf \"*+(.tsbuildinfo)\"",
@@ -52,7 +53,7 @@
   "dependencies": {
     "@galacean/effects-specification": "2.0.0-alpha.22",
     "@galacean/effects-math": "1.1.0",
-    "flatbuffers":"24.3.25",
+    "flatbuffers": "24.3.25",
     "uuid": "9.0.1"
   }
 }
