--- a/packages/effects-core/package.json
+++ b/packages/effects-core/package.json
@@ -18,7 +18,7 @@
   "scripts": {
     "prebuild": "pnpm clean",
     "build": "pnpm build:fbs && pnpm build:declaration && pnpm build:module",
-    "build:fbs": "node ../../scripts/flatc ./src/definations/index.fbs",
+    "build:fbs": "node ../../scripts/flatc ./src/__definations__/index.fbs",
     "build:module": "rollup -c",
     "build:declaration": "tsc -d --emitDeclarationOnly",
     "clean": "rimraf dist && rimraf \"*+(.tsbuildinfo)\"",
