fix: 修复微信小程序 spine 和 model 插件的支持

--- a/plugin-packages/model/package.json
+++ b/plugin-packages/model/package.json
@@ -24,6 +24,11 @@
       "import": "./dist/alipay.mjs",
       "require": "./dist/alipay.js",
       "types": "./dist/index.d.ts"
+    },
+    "./weapp": {
+      "import": "./dist/weapp.mjs",
+      "require": "./dist/weapp.js",
+      "types": "./dist/index.d.ts"
     }
   },
   "scripts": {
