build: imgui demo hmr

--- a/web-packages/imgui-demo/tsconfig.json
+++ b/web-packages/imgui-demo/tsconfig.json
@@ -1,25 +1,7 @@
 {
-  "compilerOptions": {
-    "target": "ES2020",
-    "useDefineForClassFields": true,
-    "module": "ESNext",
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
-    "skipLibCheck": true,
-    "experimentalDecorators": true,
-    "strict": true,
-    "strictPropertyInitialization": false,
-
-    /* Bundler mode */
-    "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-
-    /* Linting */
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
-  },
-  "include": ["src"]
+  "extends": "../../tsconfig.base.json",
+  "include": [
+    "src",
+    "../../types"
+  ]
 }
