--- a/web-packages/imgui-demo/package.json
+++ b/web-packages/imgui-demo/package.json
@@ -2,22 +2,18 @@
   "name": "imgui-demo",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
-  },
-  "devDependencies": {
-    "typescript": "^5.2.2",
-    "vite": "^5.2.0"
+    "dev": "vite --force"
   },
   "dependencies": {
     "@galacean/effects": "workspace:*",
-    "@galacean/effects-plugin-orientation-transformer": "workspace:*",
     "@galacean/effects-plugin-model": "workspace:*",
+    "@galacean/effects-plugin-orientation-transformer": "workspace:*",
     "@galacean/effects-plugin-spine": "workspace:*",
     "@vvfx/resource-detection": "0.6.0-alpha.9",
     "maoan-imgui-js": "^1.0.6"
+  },
+  "devDependencies": {
+    "vite": "5"
   }
 }
