--- a/plugin-packages/downgrade/package.json
+++ b/plugin-packages/downgrade/package.json
@@ -4,7 +4,7 @@
   "description": "Galacean Effects player downgrade plugin",
   "module": "./dist/index.mjs",
   "main": "./dist/index.js",
-  "brower": "./dist/index.min.js",
+  "browser": "./dist/index.min.js",
   "types": "./dist/index.d.ts",
   "files": [
     "dist"
