build: 支持抖音小程序

--- a/plugin-packages/model/package.json
+++ b/plugin-packages/model/package.json
@@ -29,6 +29,11 @@
       "import": "./dist/weapp.mjs",
       "require": "./dist/weapp.js",
       "types": "./dist/index.d.ts"
+    },
+    "./douyin": {
+      "import": "./dist/douyin.mjs",
+      "require": "./dist/douyin.js",
+      "types": "./dist/index.d.ts"
     }
   },
   "scripts": {
