--- a/packages/effects/package.json
+++ b/packages/effects/package.json
@@ -24,6 +24,11 @@
       "import": "./dist/alipay.mjs",
       "require": "./dist/alipay.js",
       "types": "./dist/index.d.ts"
+    },
+    "./douyin": {
+      "import": "./dist/douyin.mjs",
+      "require": "./dist/douyin.js",
+      "types": "./dist/index.d.ts"
     }
   },
   "typesVersions": {
@@ -32,6 +37,9 @@
         "./dist/index.d.ts"
       ],
       "alipay": [
+        "./dist/index.d.ts"
+      ],
+      "douyin": [
         "./dist/index.d.ts"
       ]
     }
