--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -5,14 +5,13 @@ contact_links:
     url: 'https://galacean.antgroup.com/effects/'
   - name: '文档'
     about: 'Galacean Effects Document'
-    url: 'https://galacean.antgroup.com/effects/#/user/user-doc'
+    url: 'https://galacean.antgroup.com/effects/user/user-doc'
   - name: 'Playground'
     about: 'Galacean Effects Playground'
-    url: 'https://galacean.antgroup.com/effects/#/playground'
+    url: 'https://galacean.antgroup.com/effects/playground'
   - name: 'API'
     about: 'Galacean Effects API'
-    url: 'https://galacean.antgroup.com/effects/#/api'
+    url: 'https://galacean.antgroup.com/effects/api'
   - name: '灵感中心'
     about: 'Galacean Effects Inspiration'
     url: 'https://galacean.antgroup.com/effects/inspiration/'
-  
