--- a/.github/ISSUE_TEMPLATE/editor_bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/editor_bug_report.yml
@@ -10,11 +10,11 @@ body:
 
         Before submitting an issue, reviewing the following resources could save you time and might help you find an existing related issue:
 
-        * [User Guide](https://galacean.antgroup.com/effects/#/user/user-doc) — Understand the basics of the GalaceanEffects editor
-        * [FAQs](https://galacean.antgroup.com/effects/#/user/gasrv4ka5sacrwpg) — Compilation of frequently asked questions
+        * [User Guide](https://galacean.antgroup.com/effects/user/user-doc) — Understand the basics of the GalaceanEffects editor
+        * [FAQs](https://galacean.antgroup.com/effects/user/gasrv4ka5sacrwpg) — Compilation of frequently asked questions
 
         Additionally, you can quickly view or respond to related issues through keyword searches in the Issue area.
-        
+
         When creating an issue, please provide as much detailed information as possible to help us locate and fix the problem quickly and to facilitate others in searching. Thank you for your cooperation! 🥰
 
   - type: textarea
