fix: stats should dispose when player is dispose

--- a/web-packages/demo/package.json
+++ b/web-packages/demo/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "@galacean/effects": "workspace:*",
     "@galacean/effects-threejs": "workspace:*",
+    "@galacean/effects-plugin-stats": "workspace:*",
+    "@galacean/effects-plugin-spine": "workspace:*",
     "@galacean/effects-plugin-orientation-transformer": "workspace:*",
     "three": "^0.149.0"
   },
