--- a/packages/effects-core/package.json
+++ b/packages/effects-core/package.json
@@ -54,6 +54,7 @@
     "@galacean/effects-specification": "2.0.1",
     "@galacean/effects-math": "1.1.0",
     "flatbuffers": "24.3.25",
-    "uuid": "9.0.1"
+    "uuid": "9.0.1",
+    "libtess": "1.2.2"
   }
 }
