--- a/plugin-packages/multimedia/package.json
+++ b/plugin-packages/multimedia/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@galacean/effects-plugin-media",
+  "name": "@galacean/effects-plugin-multimedia",
   "version": "2.0.4",
-  "description": "Galacean Effects player media plugin",
+  "description": "Galacean Effects player multimedia plugin",
   "module": "./dist/index.mjs",
   "main": "./dist/index.js",
   "browser": "./dist/index.min.js",
