--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -10,11 +10,11 @@ body:
 
         Before submitting an issue, reviewing the following resources could save you time and might help you find an existing related issue:
 
-        * [User Guide](https://galacean.antgroup.com/effects/user/user-doc) — Understand the basics of the GalaceanEffects editor
-        * [Developer Guide](https://galacean.antgroup.com/effects/user/dev-doc) — Guidance on using Galacean Effects Runtime
-        * [API Reference](https://galacean.antgroup.com/effects/api) — Detailed API documentation
-        * [FAQs](https://galacean.antgroup.com/effects/user/gasrv4ka5sacrwpg) — Compilation of frequently asked questions
-        * [Changelog](https://galacean.antgroup.com/effects/user/changelog) — Includes bug fixes and new features of Runtime updates
+        * [User Guide](https://www.galacean.com/effects/user/user-doc) — Understand the basics of the GalaceanEffects editor
+        * [Developer Guide](https://www.galacean.com/effects/user/dev-doc) — Guidance on using Galacean Effects Runtime
+        * [API Reference](https://www.galacean.com/effects/api) — Detailed API documentation
+        * [FAQs](https://www.galacean.com/effects/user/gasrv4ka5sacrwpg) — Compilation of frequently asked questions
+        * [Changelog](https://www.galacean.com/effects/user/changelog) — Includes bug fixes and new features of Runtime updates
 
         Additionally, you can quickly view or respond to related issues through keyword searches in the Issue area.
 
