--- a/.github/ISSUE_TEMPLATE/bug_report_cn.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report_cn.yml
@@ -10,11 +10,11 @@ body:
 
         在创建 Issue 前，查阅以下资源可能会为您节省时间，并帮助您找到答案：
 
-        * [用户文档](https://galacean.antgroup.com/effects/user/user-doc) —— 了解 GalaceanEffects 编辑器的基本操作
-        * [开发者文档](https://galacean.antgroup.com/effects/user/dev-doc) —— 使用 Galacean Effects Runtime 的指南
-        * [API 参考](https://galacean.antgroup.com/effects/api) —— 详细的 API 文档
-        * [常见问题](https://galacean.antgroup.com/effects/user/gasrv4ka5sacrwpg) —— 用户常见的问题合集
-        * [更新记录](https://galacean.antgroup.com/effects/user/changelog) —— 记录了 Runtime 修复的缺陷和新增功能
+        * [用户文档](https://www.galacean.com/effects/user/user-doc) —— 了解 GalaceanEffects 编辑器的基本操作
+        * [开发者文档](https://www.galacean.com/effects/user/dev-doc) —— 使用 Galacean Effects Runtime 的指南
+        * [API 参考](https://www.galacean.com/effects/api) —— 详细的 API 文档
+        * [常见问题](https://www.galacean.com/effects/user/gasrv4ka5sacrwpg) —— 用户常见的问题合集
+        * [更新记录](https://www.galacean.com/effects/user/changelog) —— 记录了 Runtime 修复的缺陷和新增功能
 
         此外，通过 Issue 区的关键词搜索，您也可能快速找到想要解决的的相关问题。
 
