--- a/.github/ISSUE_TEMPLATE/editor_bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/editor_bug_report.yml
@@ -10,8 +10,8 @@ body:
 
         Before submitting an issue, reviewing the following resources could save you time and might help you find an existing related issue:
 
-        * [User Guide](https://galacean.antgroup.com/effects/user/user-doc) — Understand the basics of the GalaceanEffects editor
-        * [FAQs](https://galacean.antgroup.com/effects/user/gasrv4ka5sacrwpg) — Compilation of frequently asked questions
+        * [User Guide](https://www.galacean.com/effects/user/user-doc) — Understand the basics of the GalaceanEffects editor
+        * [FAQs](https://www.galacean.com/effects/user/gasrv4ka5sacrwpg) — Compilation of frequently asked questions
 
         Additionally, you can quickly view or respond to related issues through keyword searches in the Issue area.
 
