--- a/.github/ISSUE_TEMPLATE/editor_bug_report_cn.yml
+++ b/.github/ISSUE_TEMPLATE/editor_bug_report_cn.yml
@@ -10,8 +10,8 @@ body:
 
         在创建 Issue 前，查阅以下资源可能会为您节省时间，并帮助您找到答案：
 
-        * [用户文档](https://galacean.antgroup.com/effects/user/user-doc) —— 了解 GalaceanEffects 编辑器的基本操作
-        * [常见问题](https://galacean.antgroup.com/effects/user/gasrv4ka5sacrwpg) —— 用户常见的问题合集
+        * [用户文档](https://www.galacean.com/effects/user/user-doc) —— 了解 GalaceanEffects 编辑器的基本操作
+        * [常见问题](https://www.galacean.com/effects/user/gasrv4ka5sacrwpg) —— 用户常见的问题合集
 
         此外，通过 Issue 区的关键词搜索，您也可能快速找到想要解决的的相关问题。
 
