--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-replace": "^6.0.1",
+    "@rollup/plugin-terser": "^0.4.4",
     "@swc/core": "^1.4.13",
     "@swc/helpers": "^0.5.15",
     "@types/chai": "4.3.14",
