refactor: three 插件跟随 Player 的 loadScene 多合成改造

--- a/packages/effects-core/package.json
+++ b/packages/effects-core/package.json
@@ -51,7 +51,7 @@
     "registry": "https://registry.npmjs.org"
   },
   "dependencies": {
-    "@galacean/effects-specification": "2.2.0-beta.0",
+    "@galacean/effects-specification": "2.2.0",
     "@galacean/effects-math": "1.1.0",
     "flatbuffers": "24.3.25",
     "uuid": "9.0.1",
