chore: move ffd into plugin package

--- a/web-packages/imgui-demo/package.json
+++ b/web-packages/imgui-demo/package.json
@@ -10,6 +10,7 @@
     "@galacean/effects-plugin-model": "workspace:*",
     "@galacean/effects-plugin-orientation-transformer": "workspace:*",
     "@galacean/effects-plugin-spine": "workspace:*",
+    "@galacean/effects-plugin-ffd": "workspace:*",
     "@vvfx/resource-detection": "^0.10.0",
     "maoan-imgui-js": "^1.0.6"
   },
