--- a/plugin-packages/rich-text/package.json
+++ b/plugin-packages/rich-text/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@galacean/effects-plugin-rich-text",
-  "version": "2.6.4",
+  "version": "0.0.0-experimental-20250828",
   "description": "Galacean Effects player rich text plugin",
   "module": "./dist/index.mjs",
   "main": "./dist/index.js",
