--- a/plugin-packages/editor-gizmo/package.json
+++ b/plugin-packages/editor-gizmo/package.json
@@ -39,7 +39,7 @@
     "access": "public",
     "registry": "https://registry.npmjs.org"
   },
-  "devDependencies": {
+  "dependencies": {
     "@galacean/effects": "workspace:*",
     "@galacean/effects-plugin-model": "workspace:*"
   }
