--- a/packages/effects-helper/package.json
+++ b/packages/effects-helper/package.json
@@ -33,7 +33,7 @@
     "access": "public",
     "registry": "https://registry.npmjs.org"
   },
-  "devDependencies": {
+  "dependencies": {
     "@galacean/effects": "workspace:*"
   }
 }
