--- a/plugin-packages/ffd/package.json
+++ b/plugin-packages/ffd/package.json
@@ -53,7 +53,7 @@
     "access": "public",
     "registry": "https://registry.npmjs.org"
   },
-  "devDependencies": {
+  "dependencies": {
     "@galacean/effects": "workspace:*"
   }
 }
