--- a/plugin-packages/rich-text/package.json
+++ b/plugin-packages/rich-text/package.json
@@ -60,7 +60,7 @@
     "access": "public",
     "registry": "https://registry.npmjs.org"
   },
-  "devDependencies": {
+  "dependencies": {
     "@galacean/effects": "workspace:*"
   }
 }
