chore: modify plugin package.json devDependencies to dependencies (#1331)
* chore: modify plugin package.json devDependencies to dependencies

* chore: change editor-gizmo deps

---------

Co-authored-by: yiiqii <yfj5tzl2005@sina.com>

--- a/plugin-packages/editor-gizmo/package.json
+++ b/plugin-packages/editor-gizmo/package.json
@@ -39,8 +39,10 @@
     "access": "public",
     "registry": "https://registry.npmjs.org"
   },
+  "dependencies": {
+    "@galacean/effects": "workspace:*"
+  },
   "devDependencies": {
-    "@galacean/effects": "workspace:*",
     "@galacean/effects-plugin-model": "workspace:*"
   }
 }
